# scheduler-webapp

./: .env.example  .env.production  .env.production.template  .env.temp  .gitignore  DEPLOYMENT.md  DIGITAL_OCEAN_DEPLOYMENT.md  Dockerfile  Procfile  README.distribution.md  README.md  app-spec.yaml  app.yaml  backup-db.sh  build-js.sh  create-distribution.sh  deploy-to-digital-ocean.sh  deploy-to-production.sh  deploy-to-web.sh  docker-compose-dev.yml  docker-compose.prod.yml  docker-compose.web.yml  docker-compose.yml  docker-entrypoint.sh  heroku.yml  pytest.ini  requirements-heroku.txt  requirements.txt  run-scheduler.sh  scheduler-app.sh  secure-js-predeploy.sh  test_deployment.sh
docs/: development_guide.md
nginx/: default.conf
nginx/conf/: app.conf
scheduler/: admin.py  cache.py  middleware.py  models.py  monitoring.py  ortools_scheduler.py  rust_interface.py  scheduler_python.py  serializers.py  tasks.py  urls.py  views.py
scheduler/management/commands/: backup_data.py  create_user.py  obfuscate_js.py  restore_data.py
scheduler/middleware/: csp_nonce.py  login_required.py
scheduler/migrations/: 0001_initial.py  0002_course_active_course_allow_multiple_and_more.py  0003_remove_student_enrolled_courses_and_more.py
scheduler/rust_scheduler/: Cargo.toml
scheduler/rust_scheduler/src/: lib.rs
scheduler/tests/: test_models.py  test_views.py
scheduler/views/: __init__.py  health.py  main.py
scheduler_project/: asgi.py  asset_security.py  celery.py  sentry.py  settings.py  settings_heroku.py  settings_prod.py  urls.py  wsgi.py
(+17 files in other folders)
