[package]
name = "rust_scheduler"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_scheduler"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8.1"
